<resources>
    <string name="app_name">GammaStore</string>
    <string name="store_label">Gamma Store</string>
    <string name="guest">Guest</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="gamma_store">Gamma Store</string>
    <string name="men">MEN</string>
    <string name="women1">WOMEN</string>
    <string name="clothing1">CLOTHING</string>
    <string name="music1">MUSIC</string>
    <string name="posters1">POSTERS</string>
    <string name="product_categories">Product Categories</string>
    <string name="men_fashion">Men Fashion</string>
    <string name="women_fashion">Women Fashion</string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="sports">Sports</string>
    <string name="computer">Computer</string>
    <string name="kids_fashion">Kids Fashion</string>
    <string name="health">Health</string>
    <string name="makeup">Makeup</string>
    <string name="shirts">Shirts</string>
    <string name="shoes">Shoes</string>
    <string name="blouse">Blouse</string>
    <string name="samsung">Samsung</string>
    <string name="apple">Apple</string>
    <string name="filter">Filter</string>
    <string name="poloshirt">Poloshirt</string>
    <string name="suit">Suit</string>
    <string name="jeans">Jeans</string>
    <string name="watch">Watch</string>
    <string name="shirt">Shirt</string>
    <string name="jacket">Jacket</string>
    <string name="bag">Bag</string>
    <string name="shoes1">Shoes</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen.</string>
    <string name="nike">NIKE</string>
    <string name="calvin_klein">Calvin Klein</string>
    <string name="samsung1_tech">SAMSUNG TECH</string>
    <string name="apple1_tech">APPLE TECH</string>
    <string name="tommy_hilfiger">TOMMY HILFIGER</string>
    <string name="calvin_klein_caps">CALVIN KLEIN</string>
    <string name="nike_sport_caps">NIKE SPORT</string>
    <string name="payments">Payments</string>
    <string name="notifications_profile">Notifications</string>
    <string name="my_orders">My Orders</string>
    <string name="profile_message">Message</string>
    <string name="profile_payments">Payments</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_call_center">Call Center</string>
    <string name="profile_about_app">About App</string>
    <string name="register_here">Register here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or">OR</string>
    <string name="language">Language</string>
    <string name="card_details">Card Details</string>
    <string name="about_app">About App</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="your_payment_was_successful">Payment was successful</string>
    <string name="week_promotion">Week Promotion</string>
    <string name="flash">Flash</string>
    <string name="sale">Sale</string>
    <string name="sale_ends_in">Sale ends in:</string>
    <string name="_23_59_59">23 : 59 : 59</string>
    <string name="categories">Categories</string>
    <string name="fashion_men">Fashion Men</string>
    <string name="fashion_women">Fashion Women</string>
    <string name="cell_phones">Cell Phones</string>
    <string name="computers">Computers</string>
    <string name="fashion_kids">Fashion Kids</string>
    <string name="recommended">Recommended</string>
    <string name="brands">Brands</string>
    <string name="cart">Cart</string>
    <string name="message">Message</string>
    <string name="sort">Sort</string>
    <string name="refine">Refine</string>
    <string name="pay">Pay</string>
    <string name="total">Total :</string>
    <string name="sara_m">Sara M</string>
    <string name="e_commerce_shopper">E-commerce shopper</string>
    <string name="reviewers_comments_go_here_lorem_ipsum_is_something_something_something_something">Reviewers comments go here.Lorem Ipsum is something something something something</string>
    <string name="card_information">Card Information</string>
    <string name="my_personal_card">My Personal Card</string>
    <string name="card_number">Card Number</string>
    <string name="valid_upto">Valid Upto:</string>
    <string name="_9867_2312_3212_4213">9867 - 2312 -3212 - 4213</string>
    <string name="_12_29">12/29</string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="cvv_cvc">CVV / CVC</string>
    <string name="_548">548</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="_9876_2312_3212_4213">9876 - 2312 - 3212 - 4213</string>
    <string name="manage_card_details">Manage Card Details</string>
    <string name="card_holder_name">Card Holder\'s Name*</string>
    <string name="card_number1">Card Number*</string>
    <string name="valid_up_to1">Valid Up to*</string>
    <string name="cvv_cvc1">CVV / CVC*</string>
    <string name="update_card_details">UPDATE CARD DETAILS</string>
    <string name="your_order_is_being_processed">Your order is being processed</string>
    <string name="transactions_details">Transactions Details</string>
    <string name="purchased_items_status">Purchased Items/Status</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="update">Update</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="gamma_store1">GAMMA Store</string>
    <string name="e_commerce_ui_kit">E-commerce UI kit</string>
    <string name="brand">Brand</string>
    <string name="account">Account</string>
    <string name="hello_i_am_gamma_what_would_you_like_to_search">Hello, I am Gamma. What would you like to search?</string>
    <string name="enter_search">Enter search keyword</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="macbook">MacBook</string>
    <string name="note_9">Note 9</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="search">Search</string>
    <string name="weekly_promotions">Weekly Promotions</string>
    <string name="search_promotions">Search promotions</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="discount_up_to_70">Discount up to 70%</string>
    <string name="end_in">End in</string>
    <string name="category_name">Category Name</string>
    <string name="sub_category">Sub Category</string>
    <string name="see_more">See More</string>
    <string name="item_discount">Item Discount</string>
    <string name="popular_items">Popular Items</string>
    <string name="new_items">New Items</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="product_detail">Product Detail</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="top_rated_products">Top Rated Products</string>
    <string name="reviews">Reviews</string>
    <string name="view_more">View More</string>
    <string name="description">Description</string>
    <string name="e_commerce_app">E-Commerce App</string>
    <string name="e_commerce_application_template_buy_this_code_template_on_the_app_store_website">E commerce application template. Buy this code template on the app store website</string>
    <string name="choose_items">Choose Items</string>
    <string name="choose_items_wherever_you_are_with_this_application_to_make_life_easier">Choose Items wherever you are with this application to make life easier</string>
    <string name="buy_items">Buy Items</string>
    <string name="shop_from_thousands_of_brands_in_the_world_in_one_application_at_throwaway_prices">Shop from thousands of brands in the world in one application at throwaway prices</string>
    <string name="find_the_best_products_at_the_gamma_shop">Find the best products at the GAMMA shop</string>
    <string name="sign_up">Sign up</string>
    <string name="or_skip">or Skip</string>
    <string name="login">Login</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sort_by">Sort By</string>
    <string name="refine_by">Refine By</string>
    <string name="popularity">Popularity</string>
    <string name="new1">New</string>
    <string name="discount">Discount</string>
    <string name="price_high_low">Price: High - Low</string>
    <string name="price_low_high">Price: Low - High</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="please_enter_your_shipping_address">Please enter your shipping address</string>
    <string name="address1">Address:</string>
    <string name="city1">City:</string>
    <string name="state1">State:</string>
    <string name="country1">Country:</string>
    <string name="go_to_payment">Go To Payment</string>
    <string name="payment1">Payment</string>
    <string name="choose_your_payment_method1">Choose your payment method</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="paypal">Paypal</string>
    <string name="google_wallet">Google Wallet</string>
    <string name="make_payment">Make Payment</string>
    <string name="hello_how_can_i_help">Hello, how can I help you?</string>
    <string name="thanks_for_downloading">Thanks for downloading Gamma Store</string>
    <string name="your_item_delivery">Your item Delivery</string>
    <string name="pending_items">Pending items list</string>
    <string name="get_discount">Get 15% discount for MacBook pro 2019</string>
    <string name="nike_sport_small">Nike Sports</string>
    <string name="calvin_klein_small">Calvin Klein</string>
    <string name="tommy_hilfiger_small">Tommy Hilfiger</string>
    <string name="apple_tech_small">Apple Tech</string>
    <string name="samsung_tech_small">Samsung Tech</string>
    <string name="about_app_text">In publishing and graphic design, Lorem Ipsum is a placeholder text commonly used to demonstrate the visual form of a document without relying on meaningful content(also called greeking). Replacing the actual content with placeholder text allows designers to design the form of the content before the content itself has been produced.  \n\nThe lorem ipsum text is typically a scrambled section of De finibus bonorum et malorum, a first century BC Latin text by Cicero, with words altered,added and removed to make it nonsensical, improper Latin.  \n\nMany popular word processors use this format as a placeholder. Some examples are Pages or Microsft Word.</string>
    <string name="item_added">The item has been added to your cart</string>
    <string name="item_already_cart">The item has already been added to your cart</string>
    <string name="discount12">Discount</string>
    <string name="start_from_fifty">Start from $50</string>
    <string name="edit_profile">Edit Profile</string>
</resources>