<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/ic_home_bottom_bar"
            android:title="@string/home" />

        <item
            android:id="@+id/bottom_brand"
            android:icon="@drawable/ic_brand_bottom_bar"
            android:title="@string/brand" />

        <item
            android:id="@+id/bottom_cart"
            android:icon="@drawable/ic_shopping_cart_bottom_bar"
            android:title="@string/cart" />

        <item
            android:id="@+id/bottom_account"
            android:icon="@drawable/ic_person_bottom_bar"
            android:title="@string/account"
            />

    </group>
</menu>
