<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/themecolor"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guilotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_black_normal"

            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/home_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
        style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_home_bottom_bar"/>

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/home"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_person_bottom_bar"/>

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/profile"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_black_24dp"/>

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height"/>

    <LinearLayout
        android:id="@+id/notifications_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_notifications_black_24dp"/>

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/notifications"/>

    </LinearLayout>

</LinearLayout>