<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trend_gradient_theme_final_chrome_intro"

    tools:context=".DeliveryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/shipping_address_back_arrow1"
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_arrow_back_theme_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ageopersonaluse"
                    android:text="@string/delivery_address"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/ageopersonaluse"
                android:text="@string/please_enter_your_shipping_address"
                android:textColor="@color/themeColor"
                android:textSize="23dp"

                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/EditTextTheme"
                android:layout_height="wrap_content"
                android:textColorHint="#000000"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/shipping_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/ageopersonaluse"
                    android:theme="@style/EditTextTheme"
                    android:hint="@string/address1"
                    android:textColor="@color/themeColor"
                    android:textColorHighlight="@color/lightThemeColor"
                    android:textColorHint="#d3d3d3" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#000000"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/shipping_city_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/ageopersonaluse"
                    android:hint="@string/city1"
                    android:textColor="@color/themeColor"
                    android:textColorHighlight="@color/lightThemeColor"
                    android:textColorHint="#d3d3d3"
                    android:textColorLink="@color/lightThemeColor"
                    android:theme="@style/EditTextTheme"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/EditTextTheme"
                android:textColorHint="#000000"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login-username_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:theme="@style/EditTextTheme"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/ageopersonaluse"
                    android:hint="@string/state1"
                    android:textColor="@color/themeColor"
                    android:textColorHighlight="@color/lightThemeColor"
                    android:textColorHint="#d3d3d3" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#000000"
                app:hintTextAppearance="@style/EditTextTheme"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/shipping_country_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/ageopersonaluse"
                    android:hint="@string/country1"
                    android:textColor="@color/themeColor"
                    android:theme="@style/EditTextTheme"
                    android:textColorHighlight="@color/lightThemeColor"
                    android:textColorHint="#d3d3d3" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/go_2_final_payment"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:background="@drawable/curved_view_sharp_theme_background"
                android:fontFamily="@font/ageopersonaluse"
                android:gravity="center"
                android:text="@string/go_to_payment"
                android:textColor="@color/white_color"
                android:textSize="17dp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>