<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:background="@color/transparent"-->
    <!--android:layout_height="wrap_content">-->


    <!--<RelativeLayout-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:mlns="http://schemas.android.com/tools"
                android:id="@+id/recommended_card_view_total_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                mlns:app="http://schemas.android.com/apk/res-auto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top_texter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="21dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000000"
                    android:text="Sort By"
                    android:fontFamily="@font/freudian_one"
                    android:gravity="center_horizontal"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33d3d3d3"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="7dp"
                    android:textColor="#000000"
                    android:text="@string/popularity"
                    android:fontFamily="@font/ageopersonaluse"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000000"
                    android:text="@string/new1"
                    android:fontFamily="@font/ageopersonaluse"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000000"
                    android:text="@string/discount"
                    android:fontFamily="@font/ageopersonaluse"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000000"
                    android:text="@string/price_high_low"
                    android:fontFamily="@font/ageopersonaluse"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="#000000"
                    android:text="@string/price_low_high"
                    android:fontFamily="@font/ageopersonaluse"
                    android:gravity="center_horizontal"
                    />




            </LinearLayout>


            </android.support.v7.widget.CardView>



        <!--</LinearLayout>-->

    <!--</RelativeLayout>-->

<!--</android.support.constraint.ConstraintLayout>-->