<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/trend_gradient_theme_final_chrome_intro"
    android:orientation="vertical">
    <!--android:background="@drawable/background_sliding_sunny"-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linear_circular_image"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:background="#00ffffff"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:src="@drawable/profile_girl"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="0.5dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="1" />

        <TextView
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ageopersonaluse"
            android:gravity="center_vertical"
            android:text="@string/guest"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sliding_menu_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_home_bottom_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/ageopersonaluse"
            android:text="@string/home"
            android:textColor="#000"
            android:textSize="20dp"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sliding_menu_brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_brand_bottom_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/ageopersonaluse"
            android:text="@string/brands"
            android:textColor="#000"
            android:textSize="20dp"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sliding_menu_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_shopping_cart_bottom_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/ageopersonaluse"
            android:text="@string/cart"
            android:textColor="#000"
            android:textSize="20dp"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sliding_menu_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_person_bottom_bar" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/ageopersonaluse"
            android:text="@string/profile"
            android:textColor="#000"
            android:textSize="20dp"

            />

    </LinearLayout>



</LinearLayout>